--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     </div>
   </section>
   <!--  section__team end -->
-  <footer></footer>  
+  <footer>
+    <h1>колбас team</h1>
+  </footer>  
 </body>
 </html>
